--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
                 <li><a href="#" class="d-flex align-items-center text-dark"><i class="material-icons-outlined">calendar_today</i> Calendrier</a></li>
                 <li><a href="#" class="d-flex align-items-center text-dark"><i class="material-icons-outlined">group</i> Mes Groupes</a></li>
                 <li><a href="#" class="d-flex align-items-center text-dark"><i class="material-icons-outlined">chat_bubble_outline</i> Notification</a></li>
-                <li><a href="#" class="d-flex align-items-center text-dark"><i class="material-icons-outlined">settings</i> Parametre</a></li>
+                <li class="{% if request.endpoint == 'parametre' %}active{% endif %}"><a href="{{ url_for('parametre') }}" class="d-flex align-items-center text-dark"><i class="material-icons-outlined">settings</i> Parametre</a></li>
             </ul>
         </div>
         <div class="content flex-grow-1 p-3" style="margin-left: 250px;">
